# flutter_tantivy

./: CHANGELOG.md  GEMINI.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_tantivy_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_tantivy.podspec
lib/: flutter_tantivy.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: tantivy_api.dart
linux/: CMakeLists.txt
macos/: flutter_tantivy.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  tantivy_api.rs
windows/: CMakeLists.txt
