[package]
name = "flutter_tantivy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tantivy = "0.25.0"
once_cell = "1.21.3"
anyhow = "1.0.100"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
